<resources>
    <string name="app_name">ScrapCollector</string>
    <string name="welcome">Welcome</string>
    <string name="email_address">Email Address</string>
    <string name="please_login_with_your_information">Please login with your information</string>
    <string name="password">Password</string>
    <string name="or_login_with">Or Login with</string>
    <string name="register_now">Register_Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
</resources>